# brightless

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: ddc_manager.rs  main.rs  monitor_row.rs  settings.rs  window.rs
